# pdf_download

./: .gitignore  README.md  config.example.json  pyproject.toml
paperfetch/: __init__.py  __main__.py  arxiv.py  citation.py  cli.py  config.py  openalex.py  pdf.py  rerank_llm.py  s2.py  select.py  title_llm.py
tests/: test_citation.py  test_cli_status.py  test_config_merge.py  test_llm_system_prompt.py
